<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_deskripsi">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_deskripsi">Tidak khawatir \n update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_deskripsi">Gunakan e-wallet untuk \n transaksi tiket nonton</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar Akun</string>
    <string name="sign_up_photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Kata Sandi</string>
    <string name="sign_in_email">Alamat Email</string>
    <string name="sign_in_btn_masuk">Masuk Akun</string>
    <string name="selamat_datang">Selamat Datang\nAngga Risky</string>
    <string name="sign_in_btn_lewati">Daftar Akun baru</string>
    <string name="simpan_dan_lanjutkna">Simpan dan Lanjutkan</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="Beli_Tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="totalbalance">Total Balance</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
